<resources>
    <string name="app_name">TestNav</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">My Compose App</string>
    <string name="title_activity_start">My Compose App</string>
    <string name="title_activity_register">My Compose App</string>
    <string name="setting">Setting</string>
    <string name="age">Age</string>
    <string name="distance">Distance</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="women">Women</string>
    <string name="requestsuccessfully">Request Successfully</string>
    <string name="requesterror">Request Error</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>